# guidance-for-deploying-model-context-protocol-servers-on-aws

./: README.md
assets/: aws-cognito-mcp-integration.md  cost-estimate-report.md  detailed-mcp-cognito-oauth-flow.md  mcp-cognito-oauth-flow.md  token-binding-validation-flow.md
source/: .gitignore  build_and_run_container.sh  cdk.context.json  config.json  package-lock.json  package.json
source/etc/: gitlab.sh
source/lib/constants/: geo-restrictions.ts
source/lib/constructs/: mcp-auth-fargate-server-construct.ts  mcp-fargate-server-construct.ts  mcp-lambda-serverless-construct.ts
source/lib/lambdas/cognito-redirect-updater/: index.js
source/lib/stacks/: cloudfront-waf-stack.ts  mcp-server-stack.ts  security-stack.ts  vpc-stack.ts
source/servers/cloudtrail-query-python/: Dockerfile  README.md  cloudtrail.py  pyproject.toml
source/servers/sample-auth-python/: Dockerfile  oauth_cognito.py  server.py
source/servers/sample-auth-python/token_storage/: __init__.py  dynamo_db_token_store.py  local_token_store.py  token_store_factory.py
source/servers/sample-lambda-streamablehttp-weather-nodejs/: index.ts  oauth-cognito.ts
source/servers/sample-weather-sse-python/: Dockerfile  oauth_cognito.py  pyproject.toml  weather.py
source/servers/sample-weather-streamable-stateless-nodejs/: Dockerfile  package-lock.json  package.json
source/servers/sample-weather-streamable-stateless-nodejs/src/: index.ts
